--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-react": "7.7.0",
-    "prettier": "^1.14.0"
+    "prettier": "^1.14.0",
+    "webpack-cli": "^3.3.6"
   },
   "dependencies": {
     "babel-eslint": "^10.0.1"
